# flakysbrain

./: .clang-format  .gitignore  BUILD  CMakeLists.txt  CPPLINT.cfg  WORKSPACE  brain.cpp  brain.h  event.h  main.cpp  neuron.cpp  neuron.h  performance_measure.cpp  performance_measure.h
brain/: BUILD.bazel  brain.cpp  brain.h  brain_mass.cpp  brain_mass.h  brain_runner.cpp  brain_runner.h  brain_test.cpp  event.cpp  event.h  neuron.cpp  neuron.h  performance_measure.cpp  performance_measure.h  types.h
brain/api/: BUILD  Server.cpp  Server.h  Service.cpp  Service.h  api.proto
brain/api/proto/: BUILD  api.proto
brain/runner/: BUILD.bazel  brain_runner.cpp  brain_runner.h
common/audio/: BUILD.bazel  audio.cpp  audio.h
common/audio/theme/: BUILD.bazel  theme.h
common/geometry/: BUILD.bazel  CircleF.h  Clipper2Helper.cpp  Clipper2Helper.h  ClipperHelper.cpp  ClipperHelper.h  ContourF.cpp  ContourF.h  ContourF_test.cpp  LineF.cpp  LineF.h  LineF_test.cpp  PointF.cpp  PointF.h  PointF_test.cpp  RectF.cpp  RectF.h
common/imgui_helper/: BUILD.bazel  imgui_helper.cpp  imgui_helper.h
common/imgui_helper/gl/: BUILD.bazel  gl_helper.cpp  gl_helper.h
common/imui/: BUILD.bazel  ImUi.cpp  ImUi.h
common/imui/fonts/: BUILD.bazel  IconsMaterialDesign.h  fonts.cpp  fonts.h
common/imui/graphics/: BUILD.bazel  graphics_window.cpp  graphics_window.h
common/imui/graphics/view/: BUILD.bazel  view.cpp  view.h  view.proto
common/imui/style/: BUILD.bazel  deepdark.cpp  enemymouse.cpp  styles.h  visualstudio.cpp
common/proto/: BUILD.bazel  Circle.pb.go  Circle.proto  Color.pb.go  Color.proto  CvMat.pb.go  CvMat.proto  Empty.pb.go  Empty.proto  Line.pb.go  Line.proto  Parameter.pb.go  Parameter.proto  Path.pb.go  Path.proto  Point.pb.go  Point.proto  Point2d.pb.go  Point2d.proto  Rect.pb.go  Rect.proto  Statistics.pb.go  Statistics.proto  TimeFrame.pb.go  TimeFrame.proto
common/proto/geometry/: BUILD.bazel  Geometry.cpp  Geometry.h
common/proto/json/: BUILD.bazel  JsonHelper.cpp  JsonHelper.h
common/proto/time/: BUILD.bazel  FromProto.cpp  FromProto.h  ToProto.cpp  ToProto.h
common/threadsafe/: BUILD.bazel  ReadWriteLocker.h  threadsafe.h  threadsafe_test.cpp
gui/: BUILD.bazel  gui.cpp  gui.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_impl_sdl.cpp  imgui_impl_sdl.h
gui/GL/: gl3w.c  gl3w.h  glcorearb.h
src/: brain.cpp  brain.h  event.cpp  event.h  main.cpp  neuron.cpp  neuron.h  performance_measure.cpp  performance_measure.h  types.h
src/_test/: brain_test.cpp
test/: brain_test.cpp
