package(default_visibility = ["//visibility:public"])

cc_library(
    name = "brain",
    srcs = glob(
        [
            "**/*.h",
            "**/*.cpp",
        ],
        exclude = ["**/*_test.*"],
    ),
    linkopts = ["-lpthread"],
)

cc_test(
    name = "test",
    timeout = "short",
    srcs = glob(["**/*_test.cpp"]),
    deps = [
        ":brain",
        "//3rdparty/catch:main",
    ],
)
