package(default_visibility = ["//visibility:public"])

cc_library(
    name = "gui",
    srcs = glob(
        [
            "*.h",
            "*.cpp",
            "GL/*.c",
            "GL/*.h",
        ],
        exclude = ["**/*_test.*"],
    ),
    includes = ["."],
    deps = [
        "//3rdparty/imgui-docking",
        "//brain/api:service",
        "@sdl2",
    ],
)
