package(default_visibility = ["//visibility:public"])

cc_library(
    name = "gui",
    srcs = glob(
        [
            "*.h",
            "*.cpp",
        ],
        exclude = ["**/*_test.*"],
    ),
    includes = ["."],
    deps = [
        "//brain/api:service",
        "//common/imui:lib",
    ],
)
