package(default_visibility = ["//visibility:public"])

cc_library(
    name = "gui",
    srcs = glob(
        [
            "*.h",
            "*.cpp",
        ],
        exclude = ["**/*_test.*"],
    ),
    includes = ["."],
    deps = [
        "//3rdparty/spdlog",
        "//brain/api:service",
        "//common/imui:lib",
        "//common/imui/graphics:lib",
        "//common/proto/json:lib",
        "//common/threadsafe:lib",
    ],
)
