package(default_visibility = ["//visibility:public"])

cc_library(
    name = "runner",
    srcs = [
        "brain_runner.cpp",
        "brain_runner.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//3rdparty/spdlog",
        "//brain",
        "//brain/api:service",
    ],
)
