load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

cc_library(
    name = "lib",
    srcs = [
        "ImUi.cpp",
        "ImUi.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//3rdparty/imgui-docking",
        "//3rdparty/imgui-docking/backends:glfw_opengl3",
        "//3rdparty/imnodes",
        "//3rdparty/implot",
        "//3rdparty/spdlog",
        "//common/audio/theme:lib",
        "//common/imui/fonts:setup",
        "//common/imui/style:lib",
    ],
)
