load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

cc_library(
    name = "lib",
    srcs = [
        "deepdark.cpp",
        "enemymouse.cpp",
        "styles.h",
        "visualstudio.cpp",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//3rdparty/imgui-docking",
    ],
)
