load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "lib",
    srcs = [
        "JsonHelper.cpp",
        "JsonHelper.h",
    ],
    hdrs = glob(["*.h"]),
    visibility = ["//visibility:public"],
    deps = [
        "//3rdparty/spdlog",
        "//common/proto:common_cc_proto",
    ],
)
